--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
 
 before_install:
     - go get github.com/mattn/goveralls
-    - Project=gomatcher
+    - Project=gohamcrest
 
 install:
     - go get github.com/cihub/seelog
